[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cg-fedramp-test-memsafe"
version = "0.1.0"
description = "Test project for cg-fedramp-test-memsafe"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "controlgate",
    "requests==2.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
